src/test/deca/context/valid/variable/empty_assign_int.deca
// Description:
//    Declare an int variable
//
// Results:
//
//
// History:
//    created on 06/01/2025

{
        int a;
}
